<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>marti_visualization_msgs</name>
  <version>0.4.0</version>
  <description>

     marti_visualization_msgs

  </description>
  <author>Marc Alban</author>
  <maintainer email="malban@swri.org">Marc Alban</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>message_runtime</exec_depend>
  
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
 <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
