<?xml version='1.0' encoding='utf-8'?>
<package format="3">
  <name>rosgraph_msgs</name>
  <version>0.1.0</version>
  <description>

     rosgraph_msgs

  </description>
  <author>Matthew Bries</author>
  <maintainer email="mbries@swri.org">Matthew Bries</maintainer>
  <license>BSD</license>
  <url>https://github.com/swri-robotics/marti_messages</url>
  
  <member_of_group>rosidl_interface_packages</member_of_group>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>message_runtime</exec_depend>

  <depend>std_msgs</depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <ros1_bridge mapping_rules="mapping_rules.yaml"/> -->
  </export>
</package>
